# PyDetector

./: .gitignore  README.md  pic.txt  picture64.txt  pyproject.toml
new-pictures/: a.xml
src/pydetector/: index.py
src/pydetector/bl/: detect.py  message_handler.py  script.py
src/pydetector/server/: app.py  routes.py
src/pydetector/utils/: image_utils.py  models_downloader.py
